--- a/Task3/task3.css
+++ b/Task3/task3.css
@@ -1,44 +1,53 @@
+body{
+    background-color: rgb(10,12,27);
+}
 .mainbox{
-    margin: 0;
-    padding: 0;
-    background-color: blue;
-    width:900px;
-    height: 550px;
+    color:white;
+    width:1000px;
+    height:380px;
+    background-color: rgb(28,25,56);
     display: flex;
     justify-content: space-between;
-    margin:50% 50%;
-}
-.text{
-    background-color:#2a2059;
-    text-align: center;
-    width:450px;
-    height: 300px;
-    color:white;
-}
-.img{
-    background-color: orangered;
-    width:450px;
-    height: 300px;
+    position: absolute;
+   left:240px;
+   top:180px;
+   
 }
 img{
-    width:450px;
-    height: 300px;
-    background-size:contain;
+    width:500px;
+    height:380px;
 }
-.boldtxt{
-    font-size: 25px;
+.text_part .normal_text{
+    color:rgb(176,174,199)
+}
+.bold_text{
+    font-size: 34px;
     font-weight: bold;
-    width:250px;
+    color:white;
+}
+.text_part{
+    width:370px;
+    height:370px;
+   
     margin: auto;
 }
-span{
-    color: blueviolet;
+.text_part p span{
+    color:rgb(172,94,220);
 }
-ul li{
-    list-style: none;
-
-}
-ul{
+.statics{
     display: flex;
-    justify-content:space-around;
+    justify-content: space-between;
+    margin-top: 60px;
+}
+.static {
+ color:rgb(176,174,199);
+    width:100px;
+    font-size: 16px;
+}
+.static span{
+    font-weight: bold;
+    font-size: 20px;
+    display: inline-block;
+    margin-bottom: 10px;
+    color:white;
 }
